// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResourceTable Name Search 1`] = `
<div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell"
          scope="col"
        >
          Name
          <button
            aria-label="sort swap"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell"
          scope="col"
        >
          Namespace
          <button
            aria-label="sort swap"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell"
          scope="col"
          style="text-align: right;"
        >
          Age
          <button
            aria-label="sort up"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="/"
          >
            mypod3
          </a>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="text-align: right;"
        >
          <p
            class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
            title="12/15/2021, 2:57:13 PM UTC"
          >
            3mo
            <span />
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots ResourceTable No Filter 1`] = `
<div>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell"
          scope="col"
        >
          Name
          <button
            aria-label="sort swap"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell"
          scope="col"
        >
          Namespace
          <button
            aria-label="sort swap"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell"
          scope="col"
          style="text-align: right;"
        >
          Age
          <button
            aria-label="sort up"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span />
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="/"
          >
            mypod0
          </a>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="text-align: right;"
        >
          <p
            class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
            title="12/15/2021, 2:57:13 PM UTC"
          >
            3mo
            <span />
          </p>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="/"
          >
            mypod1
          </a>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="text-align: right;"
        >
          <p
            class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
            title="12/15/2021, 2:57:13 PM UTC"
          >
            3mo
            <span />
          </p>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="/"
          >
            mypod2
          </a>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="text-align: right;"
        >
          <p
            class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
            title="12/15/2021, 2:57:13 PM UTC"
          >
            3mo
            <span />
          </p>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="/"
          >
            mypod3
          </a>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          MyNamespace3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="text-align: right;"
        >
          <p
            class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
            title="12/15/2021, 2:57:13 PM UTC"
          >
            3mo
            <span />
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
